--- a/css/custom.css
+++ b/css/custom.css
@@ -15,19 +15,22 @@
 .lightbox {
 	position: absolute;
 	top: 250px;
-	right: 50px;
+	left: 50px;
 	z-index: 2000;
-	background: black;
+	background: #a0a0a0;
 	min-height: 300px;
-	width: 300px;
-	padding: 10px 15px;
+	
 	color: white;
+	border: solid 1px #000;
 }
 .lightboxHeader {
 	text-align: right;
+	height:35px;
+	background: black;
+	color: #fff;
 }
 .lightboxContent {
-	
+	padding: 10px 15px;
 }
 .redFill {
 	stroke: rgba(255, 0, 0, 0.3)!important;
