--- a/css/custom.css
+++ b/css/custom.css
@@ -13,21 +13,26 @@
     background: rgba(0,0,0,.8);
 }
 .lightbox {
+	box-sizing: border-box;
 	position: absolute;
-	top: 250px;
+	bottom: 0;
 	left: 50px;
 	z-index: 2000;
-	background: #a0a0a0;
+	background: #f6f6f6;
 	min-height: 300px;
 	
 	color: white;
-	border: solid 1px #000;
+	border: solid 1px #ccc;
 }
 .lightboxHeader {
 	text-align: right;
-	height:35px;
-	background: black;
+	height: 40px;
+	background: white;
 	color: #fff;
+	border-bottom: 1px solid #ccc;
+}
+.lightboxHeader button {
+	height: 39px;
 }
 .lightboxContent {
 	padding: 10px 15px;
