--- a/css/custom.css
+++ b/css/custom.css
@@ -37,7 +37,17 @@
 .lightboxContent {
 	padding: 10px 15px;
 }
+.timeseriesLink {
+    width: 40%;
+    height: 30px;
+    background: rgba(0,0,0,.5);
+    border-radius: 4px;
+    margin-top: 10px;
+}
+.timeseriesLink:hover {
+    background: rgba(0,0,0,.8);
+}
 .redFill {
-	stroke: rgba(255, 0, 0, 0.3)!important;
-    fill: rgba(255, 0, 0, 0.3)!important;
+	stoke: rgba(255, 0, 0, 0.3)!important;
+    fll: rgba(255, 0, 0, 0.3)!important;
 }
