--- a/css/custom.css
+++ b/css/custom.css
@@ -51,3 +51,31 @@
 	stoke: rgba(255, 0, 0, 0.3)!important;
     fll: rgba(255, 0, 0, 0.3)!important;
 }
+.legendContainer {
+	height: 90px;
+	position: relative;
+}
+.legendBar {
+	width: 90%;
+	height: 50px;
+
+	position: absolute;
+	top: 40px;
+    left: 5%;
+	background-image: linear-gradient(90deg, rgb(0, 255, 0),rgb(255, 255, 0), rgb(255,0, 0));
+}
+.legendLabel {
+	position: absolute;
+	height: 60px;
+	width: 1px;
+	background: black;
+	bottom: 0;
+}
+.spanLabel {
+	position: absolute;
+	top: 15px;
+	line-height: 15px;
+	width: 20px;
+	margin-left: -10px;
+	text-align: center;
+}
